<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_soundtrack"
            android:textSize="@dimen/screen_title_size"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_upcoming_releases"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/bold_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_releases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_popular_albums"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/bold_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_this_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_popular_with_friends"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/bold_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>